--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@splidejs/react-splide": "^0.7.12",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
