--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "@headlessui/tailwindcss": "^0.1.2",
     "@splidejs/react-splide": "^0.7.12",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
