--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.2",
     "@splidejs/react-splide": "^0.7.12",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.6",
     "react-router-dom": "^5.3.4",
-    "react-toastify": "^9.1.1",
+    "react-toastify": "^9.1.2",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
